# cpp20experiments

./: README.md
integers_bytes/: CMakeLists.txt
integers_bytes/conversion/: CMakeLists.txt  integerconversion.cpp  integerconversion.h
integers_bytes/conversiontests/: CMakeLists.txt  tests.cpp
procmapwrapper/: CMakeLists.txt
procmapwrapper/conversion/: CMakeLists.txt  conversion.h
procmapwrapper/conversiontests/: CMakeLists.txt  tests.cpp
procmapwrapper/mapsparser/: CMakeLists.txt  mapparser.cpp  mapparser.h  mapregion.cpp  mapregion.h  utility.cpp  utility.h
procmapwrapper/mapsparsertests/: CMakeLists.txt  tests.cpp
procmapwrapper/mapsreader/: CMakeLists.txt  mapsreader.cpp  mapsreader.h
procmapwrapper/procmapwrapper/: CMakeLists.txt  main.cpp
